--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/direct_expenses.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/direct_expenses.html
@@ -46,6 +46,7 @@
         list-style-type: none;
         margin: 15px;
         letter-spacing: 2px;
+        cursor: pointer;
         
     }
     .list2:hover{
@@ -84,10 +85,10 @@
                     <div class="col-sm-3 m-0 p-0 head" style="border-left: 1px solid; "><p class=" ABC" style="margin-top: 20px;"><center>ABC Limited </br>For 1-Apr-22 </center></p>
                         
                 <div class="row" style="border-top: 1px solid; margin: 0px;">
-                    <div class="col-sm-9 m-0 p-0 " ><p class="ABC"><h6 style="margin-left: 100px;">Opening Balance</h6></p></div></div>
+                    <div class="col-sm-9 m-0 p-0 " ><p class="ABC"><h6 style="margin-left: 120px;">Closing Balance</h6></p></div></div>
                     <div class="row" style="border-top: 1px solid; margin: 0px;">
-                        <div class="col-sm-6 m-0 p-0 " ><p class="ABC"><h6 style="margin-left: 50px;">Debit</h6></p></div>
-                        <div class="col-sm-6 m-0 p-0 " style="border-left: 1px solid;"><p class="ABC"><h6 style="margin-left: 50px;">Credit</h6></p></div></div>
+                        <div class="col-sm-6 mt-1 p-0 " ><p class="ABC"><h6 style="margin-left: 50px;">Debit</h6></p></div>
+                        <div class="col-sm-6 mt-1 p-0 " style="border-left: 1px solid;"><p class="ABC"><h6 style="margin-left: 50px;">Credit</h6></p></div></div>
                         
                     
                     
@@ -105,19 +106,15 @@
 
                 {% for p in std %}
                 
-                <li class="list2"><a href="{% url 'payhead_month' p.id %}">{{p.name}}</a><i class="open">{{p.opening_balance}}</i></li>
+                <li class="list2"><a href="{% url 'payhead_month' p.id %}">{{p.name}}</a><i class="open">{{p.leave_with_out_pay}}</i><i class="open2">{{p.leave_withpay}}</i></li>
 
                 {% endfor  %}
                 
 
+              
                 {% for t in stm %}
                
-                 {% if t.ledger_cr_db == "Cr" %}
-                 <li class="list2"><a href="{% url 'sales_month' t.id %}">{{t.ledger_name}}</a><i class="open">{{t.ledger_opening_bal}}.00</i></li>
-                  {% else %}
-                  <!-- <li class="list2">{{t.ledger_name}} <i class="open2">{{t.ledger_opening_bal}}.00</i></li> -->
-                  <li class="list2"><a href="{% url 'sales_month' t.id %}">{{t.ledger_name}}</a><i class="open2">{{t.ledger_opening_bal}}.00</i></li>
-                  {% endif %}
+                <li class="list2"><a  href="{% url 'sales_month' t.id %}">{{t.ledger_name}}</a><i class="open">{{t.provide_banking_details}}</i><i class="open2">{{t.ledger_type}}</i></li>
 
                 {% endfor  %}
                
@@ -144,8 +141,8 @@
 
             <div class="row ml-2" style="margin-top: 15px;margin-bottom: 15px; font-size: 18px;">
                 <div class="col-sm-10 m-0 p-0 " ><a style="margin-left: 30px;">Grand Total</a></div>
-                <div class="col-sm-1 m-0 p-0 " ><a class="total" >{{total_d}}.00</a></div>
-                <div class="col-sm-1 m-0 p-0 " ><a class="total ml-1" >{{total}}.00</a></div>
+                <div class="col-sm-1 m-0 p-0 " ><a class="total" >{{total}}</a></div>
+                <div class="col-sm-1 m-0 p-0 " ><a class="total ml-2" >{{total_d}}</a></div>
                    
             </div>
 
