--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/group_month.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/group_month.html
@@ -110,7 +110,7 @@
                          
                             </td>
                             <td style="text-align: right;" ><strong  class="loss2"></strong><br>
-                                <strong style="margin-top: 30px;" id="bab">{{total_credit}}</strong></td>
+                                <strong style="margin-top: 30px;" id="bab">{{total_credit}}.00</strong></td>
 
                           
                              
@@ -127,7 +127,7 @@
                         </td>
                           
                             
-                            <td style="text-align: right;"><strong id="bab5">{{opening_balance}}</strong></td>
+                            <td style="text-align: right;"><strong id="bab5">{{opening_balance}}.00</strong></td>
                             <td style="text-align: right;" ><strong></strong></td>
                             
                             <!-- <td style="text-align: right;"><strong></strong></td>
