--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/payhead_voucher.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/payhead_voucher.html
@@ -11,6 +11,11 @@
 
     </script>
     <style>
+        .loss2{
+        visibility: hidden;
+       
+        
+    }
         
         
     </style>
@@ -26,12 +31,12 @@
                 <div class="row  " style="height: 50px;">
                 <div class="col ">
                     <h6>
-                    <span class=" d-flex justify-content-start" style="margin-top: 8px;"> Ledger : &nbsp;<strong>{{std.name}} </strong> </span>
+                    <span class=" d-flex justify-content-start" style="margin-top: 8px;"> Ledger : &nbsp;<strong>{{p.ledger_name}} </strong> </span>
                     <span class="d-flex  justify-content-end " style="margin-top: -15px;"> 1-Apr-22 to 30-Apr-22</span>
                 </h6>
                 </div>
             </div>
-                <div class="table-responsive">
+                <div class="table-responsive" >
                     <table  class="table  " style="background-color: rgba(33,57,77,255);color:#fff;">
                         <thead >
                         <tr>
@@ -46,29 +51,31 @@
                     </thead>
 
                     <tbody >
+                        {% for p in vouch2 %}
+                        <tr>
+                            <td style="text-align: center;">{{p.date}}</td>
+                            <td ><strong></strong>{{p.particular}}</td>
+                            <td><strong></strong>{{p.voucher_type}}</td>
+                            <td style="text-align: right ;">{{p.voucher_number}}</td>
+                            <td class="debit" style="text-align: right ;">{{p.debit}}<strong>
+                            
+                            <td style="text-align: right ;"><strong>{{p.credit}}</strong></td>
+    
+                            
+    
+    
+                        </tr>
+                        {% endfor %}
                     
-                    <tr>
-                        <td style="text-align: center;"> </td>
-                        <td ><strong></strong> </td>
-                        <td><strong></strong> </td>
-                        <td style="text-align: right ;"></td>
-                        <td class="debit" style="text-align: right ;"><strong>
-                        
-                        <td style="text-align: right ;"><strong></strong></td>
-
-                        
-
-
-                    </tr>
                  
                 
 
 
-                  <div class="">
-                    
-                    <tr class="">
-                        <td colspan="4" style="text-align: right;"> Opening Balance : <br>
-                            Current Total :</td>
+                  <div class="" style="margin-top: 0;">
+
+                    <tr class="" style="margin-top: 00; height: 20px;">
+                        <td colspan="4" style="text-align: right;"> Opening Balance : 
+                            
                            
                     
                             <td style="text-align: right;">
@@ -76,37 +83,52 @@
                                 <strong></strong>
 
                                 <br>
-                                <strong></strong>
+                                <strong id=""></strong>
                          
                             </td>
                             <td style="text-align: right;" id=""><strong></strong><br>
-                                <strong>{{ std.opening_balance }}</strong></td>
+                                <strong style="margin-top: 30px;" id="bab2">{{ std.opening_balance}}.00</strong></td>
 
                           
                              
-                                <!-- <td style="text-align: right;">
+                               
+                        
+                    </tr>
+                    
+                    <tr class="" style="margin-top: 200;">
+                        <td colspan="4" style="text-align: right;"> 
+                            Current Balance :
+                            
+                           
+                    
+                            <td style="text-align: right;">
 
-                                    <strong></strong>
-    
-                                    <br>
-                                    <strong>90</strong>
-       
-                                </td> -->
-                                <!-- <td style="text-align: right;" id=""><strong>{{i.ledger_opening_bal}}</strong><br>
-                                    <strong>{{total_credit}}</strong></td> -->
+                                <strong></strong>
+
+                                <br>
+                                <strong id="bab4">{{total_debit}}.00</strong>
+                         
+                            </td>
+                            <td style="text-align: right;" ><strong  class="loss2"></strong><br>
+                                <strong style="margin-top: 30px;" id="bab">{{total_credit}}.00</strong></td>
+
+                          
+                             
+                                
     
                                   
    
                         
                     </tr>
                     
+                    
                     <tr>
-                        <td colspan="4" style="text-align: right;"><strong>Closing Balance : </strong>  
+                        <td colspan="4" style="text-align: right;"><strong >Closing Balance : </strong>  
                         </td>
                           
                             
-                            <td style="text-align: right;"><strong></strong></td>
-                            <td style="text-align: right;">{{ std.opening_balance }}<strong></strong></td>
+                            <td style="text-align: right;"><strong id="bab5">{{opening_balance}}.00</strong></td>
+                            <td style="text-align: right;" ><strong></strong></td>
                             
                             <!-- <td style="text-align: right;"><strong></strong></td>
                             <td style="text-align: right;"><strong></strong></td> -->
@@ -144,5 +166,26 @@
             </div>
         </div>
     </div>
+    <!-- <script>
+        setTimeout(function ad(){ 
+    var a=document.getElementById('bab').innerHTML
+    var b=document.getElementById('bab2').innerHTML
+    var c=document.getElementById('bab4').innerHTML
+    
+    
+    var d1 = parseInt(a);
+    var d2 = parseInt(b);
+    var d4 = parseInt(c);
+    
+    
+    var d=d1+d2;
+    var d5=d4-d;
+    
+    
+    document.getElementById("bab5").innerHTML = d5+".00";
+   
+    }, 2000);
+    
+    </script> -->
 
 {% endblock %}
