--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/grp_voucher.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/grp_voucher.html
@@ -73,21 +73,21 @@
 
                   <div class="" style="margin-top: 0;">
 
-                    <tr class="" style="margin-top: 00; height: 20px;">
+                    <tr class="" style="margin-top: 00; height: 10px;">
                         <td colspan="4" style="text-align: right;"> Opening Balance : 
                             
                            
-                    
+                            
                             <td style="text-align: right;">
 
                                 <strong></strong>
 
-                                <br>
-                                <strong id=""></strong>
+                                
+                                <strong id="">{{ std.ledger_opening_bal }}</strong>
                          
                             </td>
                             <td style="text-align: right;" id=""><strong></strong><br>
-                                <strong style="margin-top: 30px;" id="bab2">{{ std.ledger_opening_bal }}.00</strong></td>
+                                <strong style="margin-top: 30px;" id="bab2"></strong></td>
 
                           
                              
@@ -105,11 +105,11 @@
 
                                 <strong></strong>
 
-                                <br>
-                                <strong id="bab4">{{total_debit}}.00</strong>
+                                
+                                <strong id="bab4">{{total_debit}}</strong>
                          
                             </td>
-                            <td style="text-align: right;" ><strong  class="loss2"></strong><br>
+                            <td style="text-align: right;" ><strong  class="loss2"></strong>
                                 <strong style="margin-top: 30px;" id="bab">{{total_credit}}.00</strong></td>
 
                           
@@ -127,8 +127,8 @@
                         </td>
                           
                             
-                            <td style="text-align: right;"><strong id="bab5">{{opening_balance}}.00</strong></td>
-                            <td style="text-align: right;" ><strong></strong></td>
+                            <td style="text-align: right;"><strong id="bab5"></strong></td>
+                            <td style="text-align: right;" >{{opening_balance}}.00<strong></strong></td>
                             
                             <!-- <td style="text-align: right;"><strong></strong></td>
                             <td style="text-align: right;"><strong></strong></td> -->
