--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/item_2.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/item_2.html
@@ -82,9 +82,9 @@ cursor:pointer;
                             <td  style="text-align: center;">{{p.rate}}</td>
                             <td  style="text-align: center;">{{p.value}}</td>
 
-                            <td style="text-align: center;">{{closing_qun}} BTL</td>
+                            <td style="text-align: center;">{{p.additional}} BTL</td>
                             <td style="text-align: center;">{{p.rate}}</td>
-                            <td style="text-align: center;">{{closing_val}}</td>
+                            <td style="text-align: center;">{{p.rate_of_duty}}</td>
                           </tr>
                          
                                 
