--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stock_voucher.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stock_voucher.html
@@ -36,7 +36,7 @@ cursor:pointer;
                 <div class="row  " style="height: 50px;">
                     <div class="col ">
                         <h6>
-                        <span class=" d-flex justify-content-start" style="margin-top: 8px;"> Ledger : &nbsp;<strong>{{p.name}} </strong> </span>
+                        <span class=" d-flex justify-content-start" style="margin-top: 8px;"> Ledger : &nbsp;<strong>{{std.name}} </strong> </span>
                         <span class="d-flex  justify-content-end " style="margin-top: -15px;"> 1-Apr-22 to 30-Apr-22</span>
                     </h6>
                     </div>
