--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/sales_accounts.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/sales_accounts.html
@@ -113,11 +113,11 @@
                 {% for t in std %}
                
                 
-                   <li class="list2"><a  href="{% url 'sales_month' t.id %}">{{t.ledger_name}}</a><i class="open">{{t.provide_banking_details}}</i><i class="open2">{{t.ledger_type}}</i></li>
+                   <li class="list2"><a  href="{% url 'sales_month_2' t.id %}">{{t.ledger_name}}</a><i class="open">{{t.ledger_type}}</i><i class="open2">{{t.provide_banking_details}}</i></li>
                    <!-- <li class="list2">{{t.ledger_name}} <i class="open">{{t.ledger_opening_bal}}</i></li> -->
                  
                   <!-- <li class="list2">{{t.ledger_name}} <i class="open2">{{t.ledger_opening_bal}}.00</i></li> -->
-                
+                  
                 
 
                 {% endfor  %}
@@ -145,8 +145,8 @@
 
             <div class="row ml-2" style="margin-top: 15px;margin-bottom: 15px; font-size: 18px;">
                 <div class="col-sm-10 m-0 p-0 " ><a style="margin-left: 30px;">Grand Total</a></div>
-                <div class="col-sm-1 m-0 p-0 " ><a class="total" >{{total}}</a></div>
-                <div class="col-sm-1 m-0 p-0 " ><a class="total ml-3" >{{total_d}}</a></div>
+                <div class="col-sm-1 m-0 p-0 " ><a class="total" >{{total_d}}</a></div>
+                <div class="col-sm-1 m-0 p-0 " ><a class="total ml-3" >{{total}}</a></div>
                    
             </div>
 
