--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/sales_income_month.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/sales_income_month.html
@@ -33,37 +33,27 @@ cursor:pointer;
                 <div class="row d-flex " style="background-color: rgb(103, 175, 220);color:#fff;width:100%;margin: auto;">
                     <div class="col ">Ledger Monthly Summary</div>
                 </div>
-                <div class="table-responsive" >
-                    <table class="table" border="1px" style="background-color: rgba(33,57,77,255);color:#fff;">
+                <div class="table-responsive">
+                    <table class="table " border="1px" style="background-color: rgba(33,57,77,255);color:#fff;">
 
                         <thead>
 
                             <tr>
+                                <th rowspan="3"   class="align-middle text-white "> <h6 class="d-flex align-items-sm-start par p-1 py-1" style="margin-left: 20px;">Particular</h6></th>
                                 
-                                <th rowspan="4"   class="align-middle text-white "> <h6 class="d-flex align-items-sm-start par p-1 py-1" style="margin-left: 20px;">Particular</h6></th>
-                                
-                                <th colspan="6" class="text-center text-white " ><h6><i>{{std.name}}</i></h6>
+                                <th colspan="3" class="text-center text-white " ><h6><i>{{std.ledger_name}}</i></h6>
                                   <h6><strong> ABC PVT.LTD </strong></h6><h6> For 1-Apr-2022</h6></th>
                               </tr>
                               <tr>
-                                <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th>
-                                <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th>
-                                <th colspan="2" class="text-center text-white " style="width: 23%;"><h6> <strong>closing balance</strong></h6></th>
+
+                                <th colspan="2" class="text-center text-white" style="width: 26%;"><h6> <strong> Transactions </strong></h6></th>
+                                <th rowspan="2" class="text-center text-white " style="width: 13%;"><h6> <strong> Closing <br>Balance</strong></h6></th>
 
                               </tr>
                               <tr>
-                                <th class="text-center text-white">Quantity</th>
-                                <th class="text-center text-white">value</th>
-                                <th class="text-center text-white">Quantity</th>
-                                <th class="text-center text-white">value</th>
-                                <th class="text-center text-white">Quantity</th>
-                                <th class="text-center text-white">value</th>
-                                
+                                <th class="text-center text-white">Debit</th>
+                                <th class="text-center text-white">Credit</th>
                               </tr>
-
-                              
-
-                             
 
 
 
@@ -72,17 +62,12 @@ cursor:pointer;
                         </thead>
                         
 
-                        <tbody>
+                        <tbody  >
                             <tr class="table-row" data-href="">
                                 <td><i>Opening Balance</i><i class="float-right "></i></td>
                                 <td></td>
                                 <td></td>
-                                <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td style="text-align: center;">{{std.quantity}} BTL</td>
-                                <td style="text-align: center;">{{std.value}}</td>
-                                
-                               
+                                <td style="text-align: center;"><strong>{{std.ledger_opening_bal}}.Dr</strong></td>
 
                             </tr>
                             
@@ -105,11 +90,6 @@ cursor:pointer;
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                               
-                                
-                                
-                                
                                     
                                             
                                 
@@ -126,14 +106,9 @@ cursor:pointer;
                                 
 
                                  <!-- {% else%} -->
-                                 <!-- <td style="text-align: end;"><strong></strong></td>
                                  <td style="text-align: end;"><strong></strong></td>
                                  <td style="text-align: end;"><strong></strong></td>
-                                 <td></td>
-                                 <td></td>
-                                 <td></td>
-                                 <td></td>
-                                 <td></td> -->
+                                 <td style="text-align: end;"><strong></strong></td>
                                  <!-- {% endif %} -->
 
                             </tr>
@@ -142,15 +117,10 @@ cursor:pointer;
 
                            
                             <tr class="table-row" >
-                                <td ><a href="{% url 'stock_voucher' std.id %}">April</a></td>
-                                <td style="text-align: center;">{{total_purchase_quntity}} BTL</td>
-                                <td style="text-align: center;">{{total_purchase_value}}</td>
-                                <td  style="text-align: center;"><strong>{{total_sales_quntity}} BTL</strong></td>
-                                <td  style="text-align: center;">{{total_sales_value}}</td>
-                                <td  style="text-align: center;">{{closing_qun}} BTL</td>
-                                <td  style="text-align: center;">{{closing_val}}</td>
-                               
-                                
+                                <td><a href="{% url 'grp_month_2' std.id %}">April</a></td>
+                                <td style="text-align: center;">{{total_debit}}</td>
+                                <td style="text-align: center;">{{total_credit}}</td>
+                                <td style="text-align: center;"><strong>{{opening_balance}}.Cr</strong></td>
 
                             </tr>
 
@@ -159,9 +129,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -169,9 +136,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr>
@@ -179,9 +143,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -189,9 +150,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -199,9 +157,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -209,9 +164,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -219,9 +171,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -229,9 +178,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -239,9 +185,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -249,9 +192,6 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -259,22 +199,16 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
 
                             </tr>
 
 
                             <tr class="table-row">
-                                <th  ><h6 class="d-flex align-items-sm-start par p-1 py-1 foot" style="margin-left: 0px;">Grand Total</h6></th>
+                                <th  ><h6 class="d-flex align-items-sm-start par p-1 py-1 foot" style="margin-left: 20px;">Grand Total</h6></th>
                                 
-                                <td style="text-align: center;">{{total_purchase_quntity}} BTL</td>
-                                <td style="text-align: center;">{{total_purchase_value}}</td>
-                                <td  style="text-align: center;"><strong>{{total_sales_quntity}} BTL</strong></td>
-                                <td  style="text-align: center;">{{total_sales_value}}</td>
-                                <td  style="text-align: center;">{{closing_qun}} BTL</td>
-                                <td  style="text-align: center;">{{closing_val}}</td>
+                                <th  style="text-align: end;">{{total_debit}}</th>
+                                <th  style="text-align: end;">{{total_credit}}</th>
+                                <th  style="text-align: end;">{{opening_balance}}.Cr</th>
                                 
                             </tr>
 
